[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdfgen-sdk"
version = "0.1.0"
description = "Official Python SDK for the PDFGen API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["pdf", "markdown", "pdfgen", "sdk"]

[project.urls]
Repository = "https://github.com/JWhist/pdfgen-sdks"
