[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docrenders-sdk"
version = "0.2.0"
description = "Official Python SDK for the DocRenders API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["pdf", "markdown", "docrenders", "sdk"]

[project.urls]
Repository = "https://github.com/JWhist/docrenders-sdks"
